[package]
name = "delay-mirror"
version = "1.0.0"
edition = "2021"

[lib]
name = "delay_mirror"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "delay-mirror-server"
path = "src/bin/server.rs"
required-features = ["server"]

[features]
default = []
workers = ["dep:worker", "dep:console_error_panic_hook", "dep:regex"]
server = ["dep:axum", "dep:tokio", "dep:reqwest", "dep:regex"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
rusqlite = { version = "0.29", features = ["chrono"] }

worker = { version = "0.5", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

axum = { version = "0.6", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
regex = { version = "1", optional = true }

[dev-dependencies]

[build-dependencies]
chrono = "0.4"

[profile.release]
opt-level = "s"
lto = true
